Bug fixing on mobile.

--- a/theme/components/header.less
+++ b/theme/components/header.less
@@ -98,7 +98,7 @@ header {
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 480px), (max-height: 480px)  {
   header {
     .topHeader{
       text-align: center;
