--- a/theme/components/maincontent.less
+++ b/theme/components/maincontent.less
@@ -22,7 +22,7 @@
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 480px), (max-height: 480px) {
   .strip {
     margin-bottom: 20px;
   }
